fix: calendar 헤더 overflow x축만으로 변경

--- a/css/main.css
+++ b/css/main.css
@@ -358,7 +358,7 @@ main {
   align-items: center;
   height: 7vh;
   width: 100%;
-  overflow: auto;
+  overflow-x: auto;
 }
 
 .calendar-header button {
